force-app/main/default/objects/Application_Record_Link__c/Application_Record_Link__c.object-meta.xml
<CustomObject>
    <label>Application Record Link</label>
    <nameField>
        <displayFormat>LINK-{000000}</displayFormat>
        <label>Application Record Link Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Record Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>