force-app/main/default/objects/Application_Record_Link__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Record Links</relationshipLabel>
    <relationshipName>Record_Links</relationshipName>
    <type>MasterDetail</type>
</CustomField>