force-app/main/default/objects/Application_Record_Link__c/fields/Conversion_Key__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Key__c</fullName>
    <label>Conversion Key</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>