force-app/main/default/objects/Application_Record_Link__c/fields/SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>SObject_Type__c</fullName>
    <label>SObject Type</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>